# Simple-GTK-Calculator

./: CMakeLists.txt  Calc.c  README.md
